@@ -567,16 +567,35 @@ s2 = soundgen(subFreq = 400, subDep = 400, nonlinBalance = 100,
 Sidebands may be easier to understand for high-pitched sounds with low subharmonic frequencies. For example, chimpanzees emit piercing screams with narrow subharmonic bands. If we set `subFreq` to 75 Hz and `subDep` to 130 Hz, subharmonics literally form a band around each harmonic of the main stack, creating a very distinct, immediately recognizable sound quality:
 ```{r fig.width = 5, fig.height = 5}
 s = soundgen(sylLen = 800, 
-             subFreq = 75, 
+             pitch = data.frame(time=c(0, .3, .9, 1), 
+                                value = c(1200, 1547, 1487, 1154)),
+             rolloff = -3, rolloffKHz = 0,
              # gradually increasing width of sidebands at 0-600 ms
+             nonlinBalance = 100,
+             subFreq = 75, 
              subDep = data.frame(time = c(0, 600, 650, 800), 
                                  value = c(0, 130, 0, 0)),  
-             nonlinBalance = 100,
-             jitterDep = 0, shimmerDep = 0, temperature = 0, 
-             formants = NULL, play = playback,
+             jitterDep = 0, shimmerDep = 0, 
+             vocalTract = 12, mouth = c(.1, .8, .1),
+             temperature = .001,
+             pitchSamplingRate = 22050, samplingRate = 22050,
+             play = playback, plot = TRUE, ylim = c(0, 5), osc = TRUE)
+```
+
+Another way to create sidebands is to add amplitude modulation (AM). Perfectly sinusoidal AM creates a simple pair of extra harmonics, while non-sinusoidal AM creates sidebands:
+```{r fig.width = 5, fig.height = 5}
+s = soundgen(sylLen = 800, 
              pitch = data.frame(time=c(0, .3, .9, 1), 
-                                value = c(1200, 1547, 1487, 1154)))
-spectrogram(s, 16000, windowLength = 50, ylim = c(0, 5), contrast = .7)
+                                value = c(1200, 1547, 1487, 1154)),
+             rolloff = -3, rolloffKHz = 0,
+             # gradually increasing width of sidebands at 0-600 ms
+             amFreq = 75, amShape = .1,
+             amDep = data.frame(time = c(0, 600, 650, 800), 
+                                value = c(0, 100, 0, 0)),  
+             vocalTract = 12, mouth = c(.1, .8, .1),
+             temperature = .001,
+             pitchSamplingRate = 22050, samplingRate = 22050,
+             play = playback, plot = TRUE, ylim = c(0, 5), osc = TRUE)
 ```
 
 *TIP The parameters regulating nonlinear effects are vectorized, so you can write `subDep = c(0, 130), jitterDep = c(0, 1)`, etc., or use the "anchor format" as above (console only, not available in the app)*
